Cambiato il nome al connection_handler

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Read/EProva per il file 2.
 deps/zlib-1.2.11/*.so
 deps/zlib-1.2.11/*.so.1
 deps/zlib-1.2.11/*.so.1.2.11
+Relazione.pdf
+Relazione.odt
